--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
 	<title>API Example</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+	<link rel="stylesheet" href="css/main.css">
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 	<script type="text/javascript">
 
@@ -128,6 +129,9 @@
 	</style>
 </head>
 <body>
+	<header>
+    		<img src="img/logo.png" id="logo">
+	</header>
 	<div>
 		<input id="input" type="text"> <button id="rec">Speak</button>
 		<br>Response<br> <div contenteditable="true" id="response"><!--<textarea id="response" cols="40" rows="20"></textarea>-->
