--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 </head>
 <body>
 	<header>
-    		<img src="img/logo.png" id="logo">
+    		<img src="logo.png" id="logo">
 	</header>
 	<div>
 		<input id="input" type="text"> <button id="rec">Speak</button>
