--- a/final/index.html
+++ b/final/index.html
@@ -142,7 +142,7 @@
 	</header>
 	<div>
 		<input id="input" type="text"> <button id="rec">Speak</button>
-		<br>Response<br> <p id="response"></p><!--<textarea id="response" cols="40" rows="20"></textarea>-->
+		<p id="response"></p><!--<textarea id="response" cols="40" rows="20"></textarea>-->
 	</div>
 </body>
 </html>
